--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,10 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="strBtn1">떴다 떴다 비행기</string>
+    <string name="strBtn2">반짝 반짝 작은별</string>
+    <string name="strBtn3">학교 종이 땡땡땡</string>
+    <string name="high">상</string>
+    <string name="middle">중</string>
+    <string name="low">하</string>
 </resources>
