곰세마리 첫마디 추가/비행기 xml 코드 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,9 @@
     <string name="strBtn1">떴다 떴다 비행기</string>
     <string name="strBtn2">반짝 반짝 작은별</string>
     <string name="strBtn3">학교 종이 땡땡땡</string>
+    <string name="strBtn4">곰 세마리</string>
+    <string name="strBtn5">노래2 (난이도 중)</string>
+    <string name="strBtn6">노래3 (난이도 중)</string>
     <string name="high">상</string>
     <string name="middle">중</string>
     <string name="low">하</string>
